# stock-getter

./: manage.py  pyproject.toml  render.yaml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
stock_getter/: asgi.py  settings.py  urls.py  wsgi.py
