[tool.poetry]
name = "stock-getter"
version = "0.1.0"
description = ""
authors = ["Jaffar Alzeidi <jaffar.sa139@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_getter"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^4.1.7"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
